Use JVMCI Compiler in JDK 11 (#15107)